初始化Phase 2-初始化其他模块一共九个模块2